--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,19 @@ body {
 }
 
 .container {
-    border: 2px solid rgb(0, 0, 0);
-    width: 300px;
-    height: 300px;
+    border: 2px solid transparent;
+    width: 400px;
+    height: 400px;
     margin: 100px auto;
     
     border-radius: 30px;
     align-content: center;
     position: relative;
+    box-shadow: 0 0 10px;
 
+}
+h1{
+    text-align: center  ;
 }
 
 .name,
@@ -45,7 +49,12 @@ body {
     border-radius: 30px;
     margin: 2px;
     margin-left: 15px;
-    
+    outline: none;
+    border: none;
+    border-bottom: 2px solid rgba(255, 166, 0, 0.608);
+    font-weight: bolder;
+
+    color: rgb(0, 0, 0);
 }
 
 i {
@@ -69,6 +78,7 @@ i {
     align-items: center;
     font-size: x-large;
     justify-content: center;
+    cursor: pointer;
 
 }
 
@@ -76,4 +86,5 @@ i {
     display: flex;
     margin-top: 15px;
     justify-content: center;
+    
 }
